--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -62,12 +62,12 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_workout"
-        android:paddingBottom="@dimen/bot_margin"
         android:layout_marginTop="@dimen/side_margin"
-        android:paddingHorizontal="@dimen/side_margin">
+        android:paddingHorizontal="@dimen/side_margin"
+        android:id="@+id/NIGGA">
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -75,10 +75,64 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:background="@drawable/gradient"
+            android:layout_marginBottom="@dimen/default_gap"
+            android:layout_marginHorizontal="@dimen/default_gap"
             tools:context=".UI.Tracker"/>
+
+
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_below="@id/NIGGA"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:id="@+id/timer_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/timer"
+            android:textSize="@dimen/header_text" />
+
+        <Chronometer
+            android:id="@+id/chrono"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/timer_text"
+            android:layout_marginTop="30dp"
+            android:textSize="@dimen/header_text" />
+
+        <Button
+            android:id="@+id/pause"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="@dimen/buton_pading"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/timer_text"
+            android:layout_marginLeft="@dimen/separation"
+            android:layout_toRightOf="@id/timer_text"
+            android:background="@drawable/button_shape"
+            android:onClick="pauseTimer"
+            android:text="@string/pause"
+            android:textSize="@dimen/small_text" />
+
+        <Button
+            android:id="@+id/finish"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="@dimen/buton_pading"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pause"
+            android:layout_alignBaseline="@id/chrono"
+            android:layout_alignLeft="@id/pause"
+            android:background="@drawable/button_shape"
+            android:onClick="finishTimer"
+            android:text="@string/finish" />
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
