--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -25,10 +25,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="@string/login_title"
             android:textStyle="bold"
             android:textSize="@dimen/header_text"/>
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="@dimen/header_text"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:contentDescription="@string/profile_text"
+            android:focusable="true"
+            android:onClick="settings"
+            app:srcCompat="@android:drawable/ic_dialog_info" />
 
     </LinearLayout>
 
