--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -76,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text"
         android:gravity="center_horizontal">
+
         <LinearLayout
             android:id="@+id/updates"
             android:layout_width="match_parent"
@@ -84,6 +85,16 @@
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/btn">
+
+            <TextView
+                android:id="@+id/height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/height"
+                android:textSize="@dimen/normal_text"
+                android:textStyle="bold"
+                android:layout_marginBottom="@dimen/margin2"/>
 
             <EditText
                 android:id="@+id/email"
@@ -97,16 +108,16 @@
                 android:layout_marginBottom="@dimen/new_margin"
                 android:inputType="numberDecimal"
                 />
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/button_shape"
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/weight"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/header_text"
-                android:text="@string/personal_settings2"
-                android:layout_marginBottom="@dimen/top_margin"
-                android:onClick="updateH"/>
+                android:layout_marginTop="20dp"
+                android:text="@string/weight"
+                android:textSize="@dimen/normal_text"
+                android:textStyle="bold"
+                android:layout_marginBottom="@dimen/margin2"/>
             <EditText
                 android:textColorHint="@color/colorWhite"
                 android:id="@+id/fullname"
@@ -119,16 +130,16 @@
                 android:layout_marginBottom="@dimen/new_margin"
                 android:inputType="numberDecimal"
                 />
-            <Button
-                android:id="@+id/butto"
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/stepGoal"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/button_shape"
-                android:textSize="@dimen/header_text"
-                android:text="@string/personal_settings1"
-                android:layout_marginBottom="@dimen/top_margin"
-                android:onClick="updateW"/>
+                android:layout_marginTop="20dp"
+                android:text="@string/birth"
+                android:textSize="@dimen/normal_text"
+                android:textStyle="bold"
+                android:layout_marginBottom="@dimen/margin2"/>
             <EditText
                 android:textColorHint="@color/colorWhite"
                 android:id="@+id/maxSteps"
@@ -141,16 +152,7 @@
                 android:layout_marginBottom="@dimen/new_margin"
                 android:inputType="numberDecimal"
                 />
-            <Button
-                android:id="@+id/maxStepsButtton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/button_shape"
-                android:textSize="@dimen/header_text"
-                android:text="@string/personal_settings_maxSteps"
-                android:layout_marginBottom="@dimen/top_margin"
-                android:onClick="updateP"/>
+
             <RadioGroup
                 android:id="@+id/dietas"
                 android:layout_width="wrap_content"
@@ -186,9 +188,9 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:background="@drawable/button_shape"
                 android:textSize="@dimen/header_text"
-                android:text="@string/dieta"
+                android:text="@string/save"
                 android:layout_marginBottom="@dimen/top_margin"
-                android:onClick="updateD"/>
+                android:onClick="save"/>
             <!--
             Pa el futuro
             <EditText
