--- a/app/src/main/res/layout/activity_workout_home.xml
+++ b/app/src/main/res/layout/activity_workout_home.xml
@@ -13,16 +13,12 @@
         android:layout_height="@dimen/toolbar"
         android:orientation="horizontal">
 
-        <ImageView
+        <Space
             android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/abc_vector_test"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:onClick="goBack"
-            android:contentDescription="@string/back_text"/>
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/workout_home_title"
@@ -67,7 +63,8 @@
         android:layout_marginTop="7dp"
         android:paddingHorizontal="@dimen/side_margin"
         android:paddingTop="@dimen/top_margin"
-        android:paddingBottom="@dimen/top_margin">
+        android:paddingBottom="@dimen/top_margin"
+        android:layout_above="@id/icons">
 
         <LinearLayout
             android:id="@+id/layout"
@@ -79,15 +76,65 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/create_btn"
+        android:layout_above="@id/icons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginRight="@dimen/side_margin"
-        android:layout_marginBottom="@dimen/toolbar"
+        android:layout_marginBottom="@dimen/side_margin"
         android:clickable="true"
         android:onClick="createPlan"
         app:backgroundTint="@color/transparency_white"
-        app:srcCompat="@drawable/plus_btn" />
+        app:srcCompat="@drawable/plus_btn"/>
+    <LinearLayout
+        android:id="@+id/icons"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/new_margin"
+        android:paddingVertical="@dimen/new_margin"
+        android:orientation="horizontal"
+        android:weightSum="5">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="tracker"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/tracker_btn"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/workouts_btn"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="home"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/home2"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="diets"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/diets_btn"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="profile"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/profile_btn"/>
+    </LinearLayout>
 
 </RelativeLayout>
