--- a/app/src/main/res/layout/activity_diet_home.xml
+++ b/app/src/main/res/layout/activity_diet_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".UI.PlanPreview">
+    tools:context=".UI.DietHome">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -89,6 +89,7 @@
             android:clickable="true"
             android:focusable="true"
             android:onClick="tracker"
+            android:layout_weight="1"
             app:srcCompat="@drawable/tracker_btn" />
 
         <ImageView
@@ -115,7 +116,6 @@
             android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="diets"
             app:srcCompat="@drawable/diets_btn" />
 
         <ImageView
