--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -97,15 +97,28 @@
         android:id="@+id/stepText"/>
 </RelativeLayout>
 
-        <com.tomer.fadingtextview.FadingTextView
-            android:id="@+id/fading_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="30dp"
-            app:texts="@array/welcome_msg"
-            app:timeout="2000"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/fading_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
+                android:text="Welcome to HealthCared"/>
+            <TextView
+                android:visibility="invisible"
+                android:id="@+id/fading_text_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:layout_centerInParent="true"
+                android:text="Check your weekly summary!"/>
+
+        </RelativeLayout>
+
+
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
