--- a/app/src/main/res/layout/activity_workout_home.xml
+++ b/app/src/main/res/layout/activity_workout_home.xml
@@ -110,7 +110,7 @@
             android:clickable="true"
             android:focusable="true"
             android:layout_weight="1"
-            app:srcCompat="@drawable/workouts_btn"/>
+            app:srcCompat="@drawable/work2"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
